Fixes #progress-bar>#tooltip z-index

--- a/css/controls.css
+++ b/css/controls.css
@@ -4,7 +4,7 @@
   background-color: #222;
   text-align: center;
   display: flex;
-  z-index: 1999999;
+  z-index: 2000;
 }
 #main-controls {
   display: inline-block;
@@ -268,7 +268,7 @@ input[type=range]::-webkit-slider-runnable-track {
   height: 5px;
   background: #121212;
   cursor: pointer;
-  z-index: 1999999;
+  z-index: 2001;
 }
 #progress {
   background: var(--theme-highlight-color);
